--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^20.5.4",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-stickynode": "^4.1.0",
     "sass": "^1.66.1",
     "typescript": "*",
     "web-vitals": "^2.1.0"
