--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,18 +11,51 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": ["@typescript-eslint", "react", "import"],
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "no-unused-vars": ["error", { "vars": "all" }],
     "indent": ["error", "tab"],
+    "no-console": "error",
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "@typescript-eslint/type-annotation-spacing": ["error", {
+      "before": false,
+      "after": true
+    }],
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["builtin"],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ],
+    "object-curly-spacing": ["error", "always"],
+    "array-bracket-spacing": ["error", "always"],
+    "space-infix-ops": ["error", {"int32Hint": false}],
+    "no-multi-spaces": "error",
+    "space-before-blocks": ["error", "always"],
+    "no-trailing-spaces": "error",
+    "key-spacing": ["error", { "beforeColon": false, "afterColon": true }]
   }
 }
