--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "author": "Christian Rudder <ringthebellpepper@gmail.com>",
   "license": "All Rights Reserved",
   "devDependencies": {
+    "@types/react-stickynode": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.0.1",
