--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "error",
     "no-unused-vars": ["error", { "vars": "all" }],
-    "indent": ["error", "tab"],
+    "indent": ["error", 4, {"SwitchCase": 1 }], "eol-last": ["error", "always"],
     "no-console": "error",
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
