--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.2",
     "react-stickynode": "^4.1.0",
     "sass": "^1.66.1",
     "typescript": "*",
@@ -40,7 +42,7 @@
     "hooks": {
       "pre-commit": "sh .git/hooks/pre-commit"
     }
-  },  
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -58,6 +60,7 @@
   "author": "Christian Rudder <ringthebellpepper@gmail.com>",
   "license": "All Rights Reserved",
   "devDependencies": {
+    "@types/react-headroom": "^3.2.0",
     "@types/react-stickynode": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
