--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
     "react-stickynode": "^4.1.0",
+    "react-textfit": "^1.1.1",
     "sass": "^1.66.1",
     "typescript": "*",
     "web-vitals": "^2.1.0"
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@types/react-headroom": "^3.2.0",
     "@types/react-stickynode": "^4.0.0",
+    "@types/react-textfit": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.0.1",
