--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "no-control-regex": 0,
     "@typescript-eslint/explicit-function-return-type": "error",
     "no-unused-vars": ["error", { "vars": "all" }],
-    "indent": ["error", 4, {"SwitchCase": 1 }], "eol-last": ["error", "always"],
+    "indent": ["error", 4, {"SwitchCase": 1 }], 
+    "eol-last": ["error", "always"],
     "no-console": "error",
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
