--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@types/node": "^20.5.4",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.0",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.3.1",
+    "google-auth-library": "^9.0.0",
+    "google-spreadsheet": "^4.0.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +29,7 @@
     "react-textfit": "^1.1.1",
     "sass": "^1.66.1",
     "typescript": "*",
+    "url": "^0.11.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
