--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^20.5.4",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,9 +29,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "test": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "lint:fix": "eslint --fix .",
